# miubrt

./: .gitignore  CONTRIBUTORS.txt  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_devel.txt  setup.cfg  setup.py
.github/workflows/: main.yml
ci/requirements/: notebooktests.yml  unittests.yml
idl/: README.txt  enhance_phidp.pro  read_bon_fullfile.pro  read_jue_fullfile.pro
miubrt/: __init__.py  io.py  ipol.py  plot.py  pol.py  util.py  xarray.py
notebooks/: __init__.py  conftest.py
notebooks/getting_started/: calib_boxpol.ipynb  explore_boxpol.ipynb  explore_cband.ipynb  explore_juxpol.ipynb  phidp_process.ipynb  process_boxpol.ipynb  rhi_boxpol.ipynb
scripts/: __init__.py
